# cpufreq-bindings

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  RELEASES.md
inc/: cpufreq-bindings.h
src/: cpufreq-bindings-common.h  cpufreq-bindings-read-cpu.c  cpufreq-bindings.c
utils/: CMakeLists.txt
utils/man/: cpufreq-bindings-read-cpu.1
